'Schedule' section iPhone fixes.

--- a/app/assets/stylesheets/custom/_areas.scss
+++ b/app/assets/stylesheets/custom/_areas.scss
@@ -316,6 +316,15 @@ $i : $min_speech_time;
   .modal-body {
     background-color: #d4724b;
     color: #fff;
+    &.parent {
+      padding: 0;
+      .userinfo {
+        padding: 15px;
+      }
+      .child-content {
+        padding: 15px;
+      }
+    }
   }
 }
 
@@ -335,6 +344,7 @@ $i : $min_speech_time;
       font-size: 36px;
       padding-left: 0 !important;
       text-decoration: underline;
+      line-height: 100% !important;
       &:hover {
         background: none !important;
         border: none !important;
